<resources>
    <string name="app_name">MangaView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="account_header_title">계정 동기화</string>
    <string name="account_signed_out">로그인하면 읽던 기록을 이어받을 수 있습니다.</string>
    <string name="account_sign_in">Google 계정으로 로그인</string>
    <string name="account_sign_in_short">로그인</string>
    <string name="account_manage">계정</string>
    <string name="account_status_signed_out">로그인 필요</string>
    <string name="account_status_signed_in">동기화됨</string>
    <string name="account_status_syncing">동기화 중</string>
    <string name="account_sync_now">지금 동기화</string>
    <string name="account_open_settings">설정 열기</string>
    <string name="account_check_update">업데이트 확인</string>
    <string name="account_syncing">계정 데이터를 동기화하는 중입니다.</string>
    <string name="account_sync_complete">동기화가 완료되었습니다.</string>
    <string name="account_sync_failed">동기화에 실패했습니다.</string>
    <string name="account_sign_out">로그아웃</string>
    <string name="account_sign_out_confirm">이 기기에서 Google 계정 연결을 해제할까요?</string>
    <string name="account_sign_in_failed">로그인에 실패했습니다.</string>
    <string name="account_firebase_missing">Firebase 설정이 필요합니다. app/google-services.json을 추가해 주세요.</string>
    <string name="account_google_oauth_missing">Google 로그인 설정이 없습니다. Firebase Authentication에서 Google 제공자를 켜고 google-services.json을 다시 받아 주세요.</string>
    <string name="account_sheet_signed_out_title">계정으로 이어보기</string>
    <string name="account_sheet_signed_out_body">Google 계정에 연결하면 앱을 다시 설치해도 서재와 읽던 위치를 복구합니다.</string>
    <string name="account_sync_scope">동기화 항목: 최근 기록, 즐겨찾기, 책갈피, 이어보기 위치</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="acra_dialog_text">예상치 못한 오류가 발생했습니다. 오류 리포트를 공유하거나 복사할 수 있습니다.\n(오류 내용은 자동으로 입력됩니다.)</string>
    <string name="first_time_dialog">- 이 앱은 비공식 앱 입니다. (소스 사이트와 관계가 없습니다)
        \n\n- 앱이 정상적으로 작동하려면 설정 메뉴에서 유효한 URL을 설정해 줘야 합니다.
        \n\n- 소스 사이트가 작동하지 않을 경우 앱 또한 정상 작동하지 않습니다.
        \n\n- 이 앱에서는 저작권 문제로 소스 사이트의 주소를 제공하지 않습니다. 페이지 최하단의 칸에 직접 입력해 주세요.
    </string>
    <string name="copyright">
        MangaView는 소스 사이트의 데이터를 더욱 편하게 볼 수 있는 뷰어입니다.
        개발자는 소스 사이트와 관계가 없으며, 소스 사이트에 어떠한 데이터가 제공되는지 알 수 없습니다. 만약 MangaView에
        저작권을 위반하거나 불법적인 데이터가 존재한다면, 이는 소스 사이트의 책임입니다. 저작권 관련 문의는
        소스 사이트로 해주십시오.
    </string>
    <string name="eula">MangaView를 사용하며 발생하는 문제에 대한 모든 책임은 사용자에게 있습니다. 동의하지 않을 경우 종료해 주세요.</string>
    <string name="home_eyebrow">READER</string>
    <string name="home_title">읽던 작품으로 바로 이동</string>
    <string name="home_subtitle">최근 기록, 인기 목록, 신작과 장르를 한 화면에서 정리했습니다.</string>
    <string name="home_load_failed_message">목록을 불러오지 못했습니다.\n네트워크 또는 사이트 연결을 확인한 뒤 다시 시도해 주세요.</string>
    <string name="mode_webtoon">웹툰</string>
    <string name="mode_comic">만화</string>
    <string name="first_time_app_name">MangaViewAndroid</string>
    <string name="first_time_guide">이용 안내</string>
    <string name="first_time_copyright">저작권</string>
    <string name="first_time_eula">EULA</string>
    <string name="agree_and_continue">동의하고 계속하기</string>
    <string name="agree_without_url">동의하고 기본주소 없이 계속하기</string>
    <string name="scroll_to_top">맨 위로 스크롤</string>
    <string name="scroll_to_bottom">맨 아래로 스크롤</string>
    <string name="resume">이어서 보기</string>
    <string name="viewer_retry">다시 시도</string>
</resources>