<?xml version="1.0" encoding="utf-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/appSurface"
    tools:context=".activity.FirstTimeActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/app_space_lg">

            <ImageView
                android:layout_height="96dp"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                style="@style/AppText.Header"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/first_time_app_name"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                style="@style/AppText.Title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_xl"
                android:text="@string/first_time_guide"
                android:textAlignment="center" />

            <TextView
                style="@style/AppText.Body"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_md"
                android:background="@drawable/app_outline_button_bg"
                android:padding="@dimen/app_space_lg"
                android:text="@string/first_time_dialog"
                android:textColor="@color/appTextSecondary" />

            <TextView
                style="@style/AppText.Title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_xl"
                android:text="@string/first_time_copyright"
                android:textAlignment="center" />

            <TextView
                style="@style/AppText.Body"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_md"
                android:background="@drawable/app_outline_button_bg"
                android:padding="@dimen/app_space_lg"
                android:text="@string/copyright"
                android:textColor="@color/appTextSecondary" />

            <TextView
                style="@style/AppText.Title"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_xl"
                android:text="@string/first_time_eula"
                android:textAlignment="center" />

            <TextView
                style="@style/AppText.Body"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/app_space_md"
                android:background="@drawable/app_outline_button_bg"
                android:padding="@dimen/app_space_lg"
                android:text="@string/eula"
                android:textColor="@color/appTextSecondary" />


            <EditText
                android:id="@+id/first_def_url"
                style="@style/AppText.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_space_lg"
                android:background="@drawable/app_search_box_bg"
                android:minHeight="48dp"
                android:paddingStart="@dimen/app_space_lg"
                android:paddingEnd="@dimen/app_space_lg"
                android:singleLine="true"
                android:textColor="@color/appText"
                android:textColorHint="@color/appTextSecondary"
                android:maxLines="1"
                android:hint="기본 주소 입력 (숫자없는 주소)"/>

            <Button
                android:background="@drawable/app_accent_button_bg"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/eulaAgreeBtn"
                style="@style/AppText.Action"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/app_space_lg"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/app_space_md"
                android:paddingStart="@dimen/app_space_md"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/agree_and_continue" />

            <Button
                android:background="@drawable/app_outline_button_bg"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/eulaNoUrlBtn"
                style="@style/AppText.Action"
                android:layout_gravity="center"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/app_space_md"
                android:layout_marginBottom="@dimen/app_space_lg"
                android:layout_width="match_parent"
                android:paddingEnd="@dimen/app_space_md"
                android:paddingStart="@dimen/app_space_md"
                android:textColor="@color/appText"
                android:text="@string/agree_without_url" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
