<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/upfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:contentDescription="@string/scroll_to_top"
        app:backgroundTint="@color/appAccent"
        app:fabSize="mini"
        app:srcCompat="@drawable/up_arrow"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/resumefab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:contentDescription="@string/resume"
        app:backgroundTint="@color/appAccent"
        app:fabSize="mini"
        app:srcCompat="@drawable/play"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/downfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:contentDescription="@string/scroll_to_bottom"
        app:backgroundTint="@color/appAccent"
        app:fabSize="mini"
        app:srcCompat="@drawable/down_arrow"
        app:tint="@android:color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>
